src/ui/snapshots/starcord__ui__login__tests__qr-error-100x30.snap
---
source: src/ui/login.rs
expression: "screen_text(&s, 100, 30)"
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                      ╔═ S T A R / C O R D ══════════════════════════════════╗                      
                      ║                                                      ║                      
                      ║ that did not work                                    ║                      
                      ║                                                      ║                      
                      ║ the code was not confirmed in time (close 4003)      ║                      
                      ║                                                      ║                      
                      ║ r   try again                                        ║                      
                      ║ 2   paste a token                                    ║                      
                      ║ q   quit                                             ║                      
                      ║                                                      ║                      
                      ║                                                      ║                      
                      ║                                                      ║                      
                      ║                                                      ║                      
                      ║                                                      ║                      
                      ║                                                      ║                      
                      ╚══════════════════════════════════════════════════════╝
