src/ui/snapshots/starcord__ui__login__tests__qr-halfblocks-100x30.snap
---
source: src/ui/login.rs
expression: "screen_text(&s, 100, 30)"
---
                                                                                                    
                                                                                                    
                      ┌──────────────────────────────────────────────────────┐                      
                      │ STAR/CORD                                            │                      
                      │                                                      │                      
                      │ scan this with the Discord app                       │                      
                      │ open Discord on your phone → Settings → Scan QR Code │                      
                      │                                                      │                      
                      │                                                      │                      
                      │                █▀▀▀▀▀█       █▀▀▀▀▀█                 │                      
                      │                █ ███ █       █ ███ █                 │                      
                      │                █ ▀▀▀ █       █ ▀▀▀ █                 │                      
                      │                ▀▀▀▀▀▀▀       ▀▀▀▀▀▀▀                 │                      
                      │                █▄ ▀█▄ ▀█▄ ▀█▄ ▀█▄ ▀█                 │                      
                      │                 ▀█▄ ▀█▄ ▀█▄ ▀█▄ ▀█▄                  │                      
                      │                ▀  ▀▀  ▀▀  ▀▀  ▀▀  ▀▀                 │                      
                      │                █▀▀▀▀▀█                               │                      
                      │                █ ███ █                               │                      
                      │                █ ▀▀▀ █                               │                      
                      │                ▀▀▀▀▀▀▀                               │                      
                      │                                                      │                      
                      │                                                      │                      
                      │ waiting for scan… 1:42                               │                      
                      │                                                      │                      
                      │ esc  back        r  a new code                       │                      
                      │                                                      │                      
                      └──────────────────────────────────────────────────────┘
